Fixed bug causing flags from input_localized to overlap form navigator,  from bug #LPS-44493.

--- a/portal-web/docroot/html/css/taglib/input_localized.css
+++ b/portal-web/docroot/html/css/taglib/input_localized.css
@@ -11,6 +11,11 @@
 
 	.input-localized-content {
 		margin-left: 6px;
+		white-space: normal;
+
+		table td {
+			display: inline-block;
+		}
 	}
 
 	&.input-localized-editor .input-localized-content {
